objects/Case_SLA__c.object
<CustomObject>
    <description>This object owns the data of the maintenance sla&apos;s of OD like Time around and ownerships.</description>
    <fields>
        <fullName>Automatic__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether Sub Task gets created automatically?</description>
        <label>Automatic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_Task_Sequence__c</fullName>
        <label>Controlling Task Sequence#</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <description>This is used to drive the Ownership</description>
        <label>Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Task_Dis_Code__c</fullName>
        <description>Master WRF Task Disposition Code</description>
        <inlineHelpText>Master WRF Task Disposition Code</inlineHelpText>
        <label>Parent Task Disp Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routed_to__c</fullName>
        <label>Routed to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Disp_Code__c</fullName>
        <description>Task Disposition Code</description>
        <inlineHelpText>Task Disposition Code</inlineHelpText>
        <label>Task Disp Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Sequence__c</fullName>
        <description>Task Sequence with in a Request Type</description>
        <inlineHelpText>Task Sequence with in a Request Type</inlineHelpText>
        <label>Task Sequence#</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <description>Task Status</description>
        <label>Task Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turnaround_Time__c</fullName>
        <label>Turnaround Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case_SLA</label>
    <listViews>
        <fullName>All_Case_SLAs</fullName>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Routed_to__c</columns>
        <columns>Turnaround_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Case SLAs</label>
    </listViews>
    <nameField>
        <label>sla</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case_SLA</pluralLabel>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <description>This record type is used for the Account Maintenance SLA</description>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>WRF_Task</fullName>
        <active>true</active>
        <description>WRF Task</description>
        <label>WRF Task</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>